Updated test memory reqs