@@ -30,6 +30,7 @@
    <properties>
       <version.forge>2.3.0.Final</version.forge>
       <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+      <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
    </properties>
 
    <dependencyManagement>
@@ -77,6 +78,15 @@
       </dependencies>
    </dependencyManagement>
    <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
+            </configuration>
+         </plugin>
+      </plugins>
       <pluginManagement>
          <plugins>
             <plugin>
